# libpd-rs

./: Cargo.toml
src/: atom.rs  error.rs  functions.rs  lib.rs
src/functions/: gui.rs  send.rs
tests/: arrays.rs  listening.rs  message_building.rs  process.rs  send_and_receive_after_touch.rs  send_and_receive_bang.rs  send_and_receive_control_change.rs  send_and_receive_double.rs  send_and_receive_float.rs  send_and_receive_list.rs  send_and_receive_midi_byte.rs  send_and_receive_note_on.rs  send_and_receive_pitch_bend.rs  send_and_receive_poly_after_touch.rs  send_and_receive_program_change.rs  send_and_receive_sys_realtime.rs  send_and_receive_sysex.rs  send_and_receive_typed_message.rs
