[package]
name = "libpd-rs"
version = "0.2.0"
authors = ["alisomay <alisomay@runbox.com>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Safe rust abstractions over libpd"
readme = "README.md"
homepage = "https://github.com/alisomay/libpd-rs"
repository = "https://github.com/alisomay/libpd-rs"
documentation = "https://docs.rs/libpd-rs/latest/libpd_rs/#"
keywords = ["puredata", "libpd", "audio", "midi", "bindings"]
categories = ["multimedia"]
exclude = ["tests/*", "assets/favicon/*", "assets/logo_*"]

[lib]
name = "libpd_rs"
path = "src/lib.rs"
test = true
doctest = true
bench = false
doc = true
crate-type = ["lib"]

[dependencies]
libpd-sys = "0.3"
thiserror = "2"
libffi = "4.1.0"
tempfile = "3.3.0"
embed-doc-image = "0.1.4"
gag = "1.0.0"

[dev-dependencies]
cpal = "0.16.0"
sys-info = "0.9.1"
nannou = "0.19"
nannou_audio = "0.19"
rand = "0.9.2"
serial_test = "3"

# For local development,
# [patch.crates-io]
# libpd-sys = { git = "https://github.com/alisomay/libpd-sys" }

# For local development,
# [patch."https://github.com/alisomay/libpd-sys"]
# libpd-sys = { path = "../libpd-sys" }
